<resources>
    <string name="app_name">Inclusive Nutrition</string>
    <string name="btn_escanear">Escanear Código</string>
    <string name="txt_focus">Foque a câmera no código de barras</string>
    <string name="txt_product_image">Imagem do produto</string>
    <string name="txt_product_description"><b> Produto:</b> Pão Panco – Pão de forma integral\n\n
    <b>Peso:</b> 500 gramas\n\n
    <b>Rotulagem Nutricional:</b> 116 calorias equivalem a 2 fatias e ½, estas calorias são baseadas em uma dieta de 2000 calorias.\n\n
    <b>ATENÇÃO AOS ALÉRGICOS</b>\n
        O produto contém: Glúten, Trigo, Leite, Soja, Aveia\n\n
        <b>PODE CONTER:</b> Ovo, cevada, centeio, avelã, castanha-do-pará e triticale. Contém lactose\n\n
    <b>Ingredientes:</b> Farinha de trigo integral, farinha de trigo enriquecida com ferro e acido fólico (acido fólico é importante para as gestantes), açúcar mascavo, glúten de trigo ( contra indicado para portadores de doença celíaca), gordura vegetal, sal refinado, farelo de trigo, farinha de aveia, soro de leite em pó (contra indicado para intolerantes a lactose), fibra de soja, fibra de trigo, sal light, conservadores, propionato de cálcio e sorbato de potássio (são sais anti mofo, inibidores de crescimento de fungos e bactérias), emulsificante mono e diglicerídeos de ácidos graxos e antioxidante, acido ascórbico
    </string>
    <string name="txt_product_unknown">Este produto não está cadastrado</string>

    <string name="tela_login">Abrir tela de Login</string>
    <string name="tela_registro">Abrir tela de Cadastro</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_about">Sobre</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_altura">Altura</string>
    <string name="hint_name">Nome Completo</string>
    <string name="btn_login">ACESSAR</string>
    <string name="btn_register">CADASTRAR</string>
    <string name="btn_link_to_register">Não tem um conta? Registre-se agora.</string>
    <string name="btn_link_to_login">Já tenho uma conta! Acessar agora.</string>
    <string name="welcome">Bem-vindo</string>
    <string name="btn_logout">SAIR</string>
    <string name="name">Nome Completo</string>

    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
</resources>
