<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_login">

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorWhite"
        android:hint="@string/hint_name"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:inputType="textCapWords"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_masc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:textColor="@color/colorWhite"
            />
        <RadioButton android:id="@+id/radio_fem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino"
            android:textColor="@color/colorWhite"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/txtDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/sexo"
        android:text="Data de Nascimento:"/>

    <LinearLayout
        android:id="@+id/spinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtDataNascimento">

        <Spinner
            android:id="@+id/dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDataNascimento"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDataNascimento"
            app:layout_constraintLeft_toRightOf="@+id/dia"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>

        <Spinner
            android:id="@+id/ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDataNascimento"
            app:layout_constraintLeft_toRightOf="@+id/mes"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <EditText
        android:id="@+id/altura"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinners"
        android:background="@color/colorWhite"
        android:hint="@string/hint_altura"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/altura"
        android:background="@color/colorWhite"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:background="@color/colorWhite"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <!-- Register Button -->

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:background="@color/btn_login_bg"
        android:text="@string/btn_register"
        android:textColor="@color/btn_login" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

</android.support.constraint.ConstraintLayout>